# tui-patch

./: .gitignore  Cargo.toml  README.md
examples/: certificate_renewal.yaml  ubuntu_packages_upgrade.yaml
src/: authentication.rs  bitwarden.rs  config.rs  logfile.rs  main.rs
src/authenticator/: bitwarden.rs  mod.rs
src/logger/: mod.rs
src/resolver/: mod.rs  phpipam.rs
