[package]
name = "tui-patch"
version = "0.1.3"
authors = ["Roland Mueller <1357906+oerli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0.64"
indicatif = "0.15.0"
chrono = "0.4.19"
structopt = "0.3.21"
rpassword = "5.0.1"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
http = "0.2.4"
log = { version = "0.4.14", features = ["std"] }