[package]
name = "tui-patch"
version = "0.1.3"
authors = ["Roland Mueller <1357906+oerli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0.79"
indicatif = "0.16.2"
chrono = "0.4.19"
structopt = "0.3.26"
rpassword = "5.0.1"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
http = "0.2.6"
log = { version = "0.4.14", features = ["std"] }